--- a/Setup.ipynb
+++ b/Setup.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "# hardware and OS\n",
-    "To tun this repo, you need 1 to 8 GPUs with CUDA. If you don't have a Nvidia Graphic card, no problem! This notebook is intended to run on Google Colab!\n",
+    "To run this repo, you need 1 to 8 GPUs with CUDA. If you don't have a Nvidia Graphic card, no problem! This notebook is intended to run on Google Colab!\n",
     "\n",
     "Don't forget to activate the GPU in **Goolgle Colab** ([how to](https://jovianlin.io/pytorch-with-gpu-in-google-colab/)) If you do not enable GPU from the beggining then you will have to restart te setup from beggining\n",
     "\n",
